--- a/go/index.html
+++ b/go/index.html
@@ -13,7 +13,7 @@
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-M50CZY3LGQ');</script>
     <!--Microsoft Clarity--><script type="text/javascript">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window, document, "clarity", "script", "fpva872c50");</script>
     <!--Clicky--><script async src="//static.getclicky.com/101396814.js"></script><noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101396814ns.gif" /></p></noscript>
-    <!--Woopra--><script>!function(){var t,o,c,e=window,n=document,r=arguments,a="script",i=["call","cancelAction","config","identify","push","track","trackClick","trackForm","update","visit"],s=function(){var t,o=this,c=function(t){o[t]=function(){return o._e.push([t].concat(Array.prototype.slice.call(arguments,0))),o}};for(o._e=[],t=0;t<i.length;t++)c(i[t])};for(e.__woo=e.__woo||{},t=0;t<r.length;t++)e.__woo[r[t]]=e[r[t]]=e[r[t]]||new s;(o=n.createElement(a)).async=1,o.src="https://static.woopra.com/js/w.js",(c=n.getElementsByTagName(a)[0]).parentNode.insertBefore(o,c)}("woopra");woopra.config({domain: "tgnav.github.io",outgoing_tracking: true,download_tracking: true,click_tracking: true});woopra.track();</script>
+    <!--Woopra--><script>!function(){var t,o,c,e=window,n=document,r=arguments,a="script",i=["call","cancelAction","config","identify","push","track","trackClick","trackForm","update","visit"],s=function(){var t,o=this,c=function(t){o[t]=function(){return o._e.push([t].concat(Array.prototype.slice.call(arguments,0))),o}};for(o._e=[],t=0;t<i.length;t++)c(i[t])};for(e.__woo=e.__woo||{},t=0;t<r.length;t++)e.__woo[r[t]]=e[r[t]]=e[r[t]]||new s;(o=n.createElement(a)).async=1,o.src="https://static.woopra.com/js/w.js",(c=n.getElementsByTagName(a)[0]).parentNode.insertBefore(o,c)}("woopra");woopra.config({domain: "feijiqun.github.io",outgoing_tracking: true,download_tracking: true,click_tracking: true});woopra.track();</script>
     <script>
         if (navigator.serviceWorker != null) {
             navigator.serviceWorker.register('/sw.js')
@@ -61,7 +61,7 @@
                 <img src="/assets/images/logo3.png" width="200px" height="50px">
               </div>
             </div>
-            <a href="https://t.me/tgnav0bot" class="box__button" target="_blank"></a>
+            <a href="https://t.me/feijiqun0bot" class="box__button" target="_blank"></a>
         </div>
     </div>-->
 </body>
