--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name=keywords
           content="Telegram频道,Telegram导航,FeiJiQun,Telegram频道推荐,Telegram索引,TG频道,TG导航,TG频道推荐,TG索引,电报频道,电报导航,电报频道推荐,电报索引,feijiqun.github.io">
     <meta name=image content="https://feijiqun.github.io/assets/images/favicon.png">
-    <meta name=google-site-verification content="F1nPVw7x_VZ_WGGo3PynNPSZS7uSwLcOciYLa8TIlzA">
-    <meta name=msvalidate.01 content="8026DCC1F9564849B2ADFFCAA6FE67A2">
-    <meta name=yandex-verification content="c9bf4cec33830701">
+    <meta name=google-site-verification content="RuRoj3Y9hlXg6QyAOjPUtXPuY2BrtKZt33JCZ47q77M">
+    <meta name=msvalidate.01 content="https://feijiqun.github.io/">
+    <meta name=yandex-verification content="66b1ca86347489b2">
     <link rel=manifest href=/manifest.json>
-    <title>频道 | FeiJiQun - Telegram频道群组导航</title>
+    <title>频道 | 飞机群 - Telegram频道群组导航</title>
     <link rel="shortcut icon" href=https://feijiqun.github.io/assets/images/favicon.png>
     <link rel=stylesheet id=block-library-css href=https://feijiqun.github.io/assets/css/block-library.min-5.6.2.css
           type=text/css media=all>
