--- a/go/index.html
+++ b/go/index.html
@@ -73,7 +73,7 @@
     const params = new URLSearchParams(url.search);
 // 获取特定参数的值
     const username = params.get('username');
-    var jump_url = atob("dGduYXYuZ2l0aHViLmlv");
+    var jump_url = atob("ZmVpamlxdW4uZ2l0aHViLmlv");
     var domain = window.location.host;
     document.title = "正在跳转至@" + username + "...";
     if((domain == jump_url || domain == "localhost:1313") && username)
