--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name=author content="FeiJiQun">
     <meta name=copyright content="FeiJiQun">
     <meta name=description
-          content="Telegram频道 | FeiJiQun - Telegram频道群组导航。收录Telegram上的优质频道、群组、机器人，打造一个高质量Telegram导航。2025全网最佳Telegram导航，从20000+频道、群组、机器人中精心筛选，更多优质内容尽在FeiJiQun！">
+          content="Telegram频道 | 飞机群 - Telegram频道群组导航。收录Telegram上的优质频道、群组、机器人，打造一个高质量Telegram导航。2025全网最佳Telegram导航，从20000+频道、群组、机器人中精心筛选，更多优质内容尽在FeiJiQun！">
     <meta name=keywords
           content="Telegram频道,Telegram导航,FeiJiQun,Telegram频道推荐,Telegram索引,TG频道,TG导航,TG频道推荐,TG索引,电报频道,电报导航,电报频道推荐,电报索引,feijiqun.github.io">
     <meta name=image content="https://feijiqun.github.io/assets/images/favicon.png">
@@ -326,7 +326,7 @@
                                                                       data-src=https://t.me/i/userpic/160/recommend3.jpg
                                                                       onerror='this.src="/assets/images/default.jpg"'
                                                                       alt=avatar referrerpolicy=origin>
-                <p class=wordname>频道索引&推荐</p></a><a href="/link/?url=t.me%2fsoso%3fstart%3da_6663363976"
+                <p class=wordname>频道索引&推荐</p></a><a href="/link/?url=t.me/soso?start=a_1023712789"
                                                           target=_blank rel=nofollow data-id
                                                           data-url="t.me/soso?start=a_6663363976" class=wordsub
                                                           data-toggle=tooltip data-placement=bottom
@@ -383,23 +383,23 @@
                     class="site-tag fas fa-hashtag icon-lg mr-1" id=9a8e917dfa3352ed2c26ed60e17dd361></i>推广</h4></div>
             <div class=row>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
-                    <div class="url-body default"><a href="/link/?url=panel.sanfen.icu" target=_blank rel=nofollow
-                                                     data-id data-url=panel.sanfen.icu class="card no-c mb-4"
+                    <div class="url-body default"><a href="/link/?url=t.me/soso?start=a_1023712789" target=_blank rel=nofollow
+                                                     data-id data-url=t.me/soso?start=a_1023712789 class="card no-c mb-4"
                                                      data-toggle=tooltip data-placement=bottom
                                                      data-original-title=优质高性价比中转机场>
                         <div class=card-body>
                             <div class="url-content d-flex align-items-center">
                                 <div class="url-img mr-2 d-flex align-items-center justify-content-center"><img
                                         class=lazy src=/assets/images/loading.gif
-                                        data-src=/assets/images/sanfenjichang.jpg
-                                        onerror='this.src="/assets/images/default.jpg"' alt=三分机场
+                                        data-src=/assets/images/soso.jpeg
+                                        onerror='this.src="/assets/images/default.jpg"' alt=SOSO搜搜
                                         referrerpolicy=origin></div>
                                 <div class="url-info flex-fill">
-                                    <div class="text-sm overflowClip_1"><strong>三分机场</strong></div>
-                                    <p class="overflowClip_1 m-0 text-muted text-xs">优质高性价比中转机场</p></div>
+                                    <div class="text-sm overflowClip_1"><strong>SOSO搜搜</strong></div>
+                                    <p class="overflowClip_1 m-0 text-muted text-xs">🔍 发送关键词来寻找群组、频道或视频</p></div>
                             </div>
                         </div>
-                    </a><a href="/link/?url=panel.sanfen.icu" target=_blank rel=nofollow
+                    </a><a href="/link/?url=t.me/soso?start=a_1023712789" target=_blank rel=nofollow
                            class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip
                            data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
