--- a/index.html
+++ b/index.html
@@ -405,111 +405,112 @@
                             class="fa fa-circle-chevron-right"></i></a></div>
                 </div>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
-                    <div class="url-body default"><a href="/link/?url=msb6x.com%2f%3fdc%3dmzdt0050" target=_blank
+                    <div class="url-body default"><a href="/link/?url=t.me/jiso?start=a_1023712789" target=_blank
                                                      rel=nofollow data-id data-url="msb6x.com/?dc=mzdt0050"
                                                      class="card no-c mb-4" data-toggle=tooltip data-placement=bottom
-                                                     data-original-title=masobu免费黄游入口>
+                                                     data-original-title=极搜🔍中文搜索@JISO入口>
                         <div class=card-body>
                             <div class="url-content d-flex align-items-center">
                                 <div class="url-img mr-2 d-flex align-items-center justify-content-center"><img
-                                        class=lazy src=/assets/images/loading.gif data-src=/static/3.gif
-                                        onerror='this.src="/assets/images/default.jpg"' alt=免费黄游
+                                        class=lazy src=/assets/images/loading.gif data-src=/assets/images/jiso.jpg
+                                        onerror='this.src="/assets/images/default.jpg"' alt=极搜🔍中文搜索@JISO
                                         referrerpolicy=origin></div>
                                 <div class="url-info flex-fill">
-                                    <div class="text-sm overflowClip_1"><strong>免费黄游</strong></div>
-                                    <p class="overflowClip_1 m-0 text-muted text-xs">masobu免费黄游入口</p></div>
+                                    <div class="text-sm overflowClip_1"><strong>极搜🔍中文搜索@JISO</strong></div>
+                                    <p class="overflowClip_1 m-0 text-muted text-xs">极搜🔍中文搜索@JISO入口</p></div>
                             </div>
                         </div>
-                    </a><a href="/link/?url=msb6x.com%2f%3fdc%3dmzdt0050" target=_blank rel=nofollow
+                    </a><a href="/link/?url=t.me/jiso?start=a_1023712789" target=_blank rel=nofollow
                            class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip
                            data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
                 </div>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
                     <div class="url-body default"><a
-                            href="/link/?url=aigirlfriendstudio.com%2f%3fref_id%3d64eee3d8-a069-4f92-a281-14d8233bf1df"
+                            href="/link/?url=t.me/Super?start=ref-1023712789"
                             target=_blank rel=nofollow data-id
                             data-url="aigirlfriendstudio.com/?ref_id=64eee3d8-a069-4f92-a281-14d8233bf1df"
                             class="card no-c mb-4" data-toggle=tooltip data-placement=bottom
-                            data-original-title=🌟顶尖色情，在线游玩💋多样角色场景18禁性癖待你开发！😍>
+                            data-original-title=Super 超级搜索>
                         <div class=card-body>
                             <div class="url-content d-flex align-items-center">
                                 <div class="url-img mr-2 d-flex align-items-center justify-content-center"><img
-                                        class=lazy src=/assets/images/loading.gif data-src=/static/fengyue.gif
-                                        onerror='this.src="/assets/images/default.jpg"' alt=Ai榨精淫欲💋
+                                        class=lazy src=/assets/images/loading.gif data-src=/assets/images/super.jpg
+                                        onerror='this.src="/assets/images/default.jpg"' alt=Super 搜索
                                         referrerpolicy=origin></div>
                                 <div class="url-info flex-fill">
-                                    <div class="text-sm overflowClip_1"><strong>Ai榨精淫欲💋</strong></div>
+                                    <div class="text-sm overflowClip_1"><strong>Super 搜索</strong></div>
                                     <p class="overflowClip_1 m-0 text-muted text-xs">
-                                        🌟顶尖色情，在线游玩💋多样角色场景18禁性癖待你开发！😍</p></div>
+                                        Super 超级搜索</p></div>
                             </div>
                         </div>
-                    </a><a href="/link/?url=aigirlfriendstudio.com%2f%3fref_id%3d64eee3d8-a069-4f92-a281-14d8233bf1df"
+                    </a><a href="/link/?url=t.me/Super?start=ref-1023712789"
                            target=_blank rel=nofollow class="togo text-center text-muted is-views" data-id=689
                            data-toggle=tooltip data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
                 </div>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
-                    <div class="url-body default"><a href="/link/?url=url.13579.fun%2fmomo2" target=_blank rel=nofollow
-                                                     data-id data-url=url.13579.fun/momo2 class="card no-c mb-4"
+                    <div class="url-body default"><a href="/link/?url=t.me/smss?start=spread_1023712789" target=_blank rel=nofollow
+                                                     data-id data-url=t.me/smss?start=spread_1023712789 class="card no-c mb-4"
                                                      data-toggle=tooltip data-placement=bottom
-                                                     data-original-title=免费看奈飞，迪士尼>
+                                                     data-original-title=🔍神马搜索是TG的中文导航，发送词语即可搜索关联群组与频道资源👍>
                         <div class=card-body>
                             <div class="url-content d-flex align-items-center">
                                 <div class="url-img mr-2 d-flex align-items-center justify-content-center"><img
                                         class=lazy src=/assets/images/loading.gif
-                                        data-src=https://t.me/i/userpic/160/Tvnetflix.jpg
-                                        onerror='this.src="/assets/images/default.jpg"' alt=画境播放器
+                                        data-src=/assets/images/smss.jpg
+                                        onerror='this.src="/assets/images/default.jpg"' alt=🐴 神马搜索 🔍
                                         referrerpolicy=origin></div>
                                 <div class="url-info flex-fill">
-                                    <div class="text-sm overflowClip_1"><strong>画境播放器</strong></div>
-                                    <p class="overflowClip_1 m-0 text-muted text-xs">免费看奈飞，迪士尼</p></div>
+                                    <div class="text-sm overflowClip_1"><strong>🐴 神马搜索 🔍</strong></div>
+                                    <p class="overflowClip_1 m-0 text-muted text-xs">🔍神马搜索是TG的中文导航，发送词语即可搜索关联群组与频道资源👍</p></div>
                             </div>
                         </div>
-                    </a><a href="/link/?url=url.13579.fun%2fmomo2" target=_blank rel=nofollow
+                    </a><a href="/link/?url=t.me/smss?start=spread_1023712789" target=_blank rel=nofollow
                            class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip
                            data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
                 </div>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
-                    <div class="url-body default"><a href="/link/?url=shenlong.wiki" target=_blank rel=nofollow data-id
+                    <div class="url-body default"><a href="/link/?url=t.me/ikuaisobot?start=1023712789" target=_blank rel=nofollow data-id
                                                      data-url=shenlong.wiki class="card no-c mb-4" data-toggle=tooltip
                                                      data-placement=bottom data-original-title=性价比中转机场>
                         <div class=card-body>
                             <div class="url-content d-flex align-items-center">
                                 <div class="url-img mr-2 d-flex align-items-center justify-content-center"><img
-                                        class=lazy src=/assets/images/loading.gif data-src=/assets/images/default.jpg
-                                        onerror='this.src="/assets/images/default.jpg"' alt=神龙机场
+                                        class=lazy src=/assets/images/loading.gif data-src=/assets/images/iks.jpg
+                                        onerror='this.src="/assets/images/default.jpg"' alt=i快搜-🔍强大的搜索引擎
                                         referrerpolicy=origin></div>
                                 <div class="url-info flex-fill">
-                                    <div class="text-sm overflowClip_1"><strong>神龙机场</strong></div>
-                                    <p class="overflowClip_1 m-0 text-muted text-xs">性价比中转机场</p></div>
+                                    <div class="text-sm overflowClip_1"><strong>i快搜-🔍强大的搜索引擎</strong></div>
+                                    <p class="overflowClip_1 m-0 text-muted text-xs">帮你找到有趣的群、频道、视频、音乐、电影、新闻
+                                    </p></div>
                             </div>
                         </div>
-                    </a><a href="/link/?url=shenlong.wiki" target=_blank rel=nofollow
+                    </a><a href="/link/?url=t.me/ikuaisobot?start=1023712789" target=_blank rel=nofollow
                            class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip
                            data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
                 </div>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
-                    <div class="url-body default"><a href="/link/?url=t.me%2f%2bekSoMUwP3_VjNTRl" target=_blank
+                    <div class="url-body default"><a href="/link/?url=t.me/aiso?start=telegram_1023712789" target=_blank
                                                      rel=nofollow data-id data-url=t.me/+ekSoMUwP3_VjNTRl
                                                      class="card no-c mb-4" data-toggle=tooltip data-placement=bottom
-                                                     data-original-title=全国高端外围，已付保证金3500U>
+                                                     data-original-title=帮你找到有趣的群、频道、视频、音乐、电影、新闻>
                         <div class=card-body>
                             <div class="url-content d-flex align-items-center">
                                 <div class="url-img mr-2 d-flex align-items-center justify-content-center"><img
                                         class=lazy src=/assets/images/loading.gif
-                                        data-src=https://t.me/i/userpic/160/wyx888bot.jpg
-                                        onerror='this.src="/assets/images/default.jpg"' alt=景福宫
+                                        data-src=/assets/images/aiso.jpg
+                                        onerror='this.src="/assets/images/default.jpg"' alt=aiso中文搜索🔍
                                         referrerpolicy=origin></div>
                                 <div class="url-info flex-fill">
-                                    <div class="text-sm overflowClip_1"><strong>景福宫</strong></div>
-                                    <p class="overflowClip_1 m-0 text-muted text-xs">全国高端外围，已付保证金3500U</p>
+                                    <div class="text-sm overflowClip_1"><strong>aiso中文搜索🔍</strong></div>
+                                    <p class="overflowClip_1 m-0 text-muted text-xs">查找群组、频道、影视、音乐或机器人。</p>
                                 </div>
                             </div>
                         </div>
-                    </a><a href="/link/?url=t.me%2f%2bekSoMUwP3_VjNTRl" target=_blank rel=nofollow
+                    </a><a href="/link/?url=t.me/aiso?start=telegram_1023712789" target=_blank rel=nofollow
                            class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip
                            data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
