--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           media=all>
     <link rel=stylesheet id=custom-css href=https://feijiqun.github.io/assets/css/custom-style.css type=text/css
           media=all>
+    <link rel=stylesheet id=modern-enhancements-css href=https://feijiqun.github.io/assets/css/modern-enhancements.css type=text/css
+          media=all>
     <link rel=stylesheet href=https://use.fontawesome.com/releases/v6.7.2/css/all.css>
     <script src=https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js></script>
     <script type=text/javascript src=https://feijiqun.github.io/assets/js/content-search.js
@@ -2610,7 +2612,8 @@
         src=https://cdn.jsdelivr.net/npm/theia-sticky-sidebar@1.7.0/dist/theia-sticky-sidebar.min.js></script>
 <script type=text/javascript
         src=https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js></script>
-<script type=text/javascript src=https://feijiqun.github.io/assets/js/app-anim.js id=appanim-js></script>
+    <script type=text/javascript src=https://feijiqun.github.io/assets/js/app-anim.js id=appanim-js></script>
+    <script type=text/javascript src=https://feijiqun.github.io/assets/js/modern-enhancements.js id=modern-enhancements-js></script>
 <script type=text/javascript>$(document).ready(function () {
     var e = $("#loading");
     e.addClass("close"), setTimeout(function () {
