--- a/index.html
+++ b/index.html
@@ -216,6 +216,16 @@
             background: none !important;
         }
     </style>
+    <style>
+    /* 公告栏背景透明，提升可读性 */
+    .bulletin-big,
+    .bulletin-big .card,
+    .bulletin-big .card-body {
+        background: transparent !important;
+        background-color: transparent !important;
+        box-shadow: none !important;
+    }
+    </style>
 </head>
 <body class="io-grey-mode background-option-1">
 <div id=loading>
@@ -491,7 +501,7 @@
                                                                 target=_blank>TGwiki：由feijiqun打造的高质量Telegram知识库，帮助用户更科学地使用Telegram。</a>
                                     </div>
                                     <div class=carousel-item><a class=overflowClip_1
-                                                                href="/link/?url=sms-activate.io/?ref=3073106"
+                                                                href="/link/?url=sms-activate.io/?ref=12782462"
                                                                 target=_blank>接码平台推荐：超多国家号码可供选择，支持注册TG、Google、X、Ins、ChatGPT等。</a>
                                     </div>
                                 </div>
