--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,12 @@
         border-radius: 3px;
         background: rgba(0, 0, 0, .12);
         -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, .2)
-    }</style>
+    }
+#bulletin_box {
+    border: 1px solid #fff !important;
+    border-radius: 8px !important;
+}
+</style>
     <script>navigator.serviceWorker != null && navigator.serviceWorker.register("/sw.js").then(function (e) {
         console.log("Registered events at scope: ", e.scope)
     })</script>
