--- a/p2/index.html
+++ b/p2/index.html
@@ -73,6 +73,12 @@
     <script>navigator.serviceWorker != null && navigator.serviceWorker.register("/sw.js").then(function (e) {
         console.log("Registered events at scope: ", e.scope)
     })</script>
+    <style>
+    #bulletin_box {
+        border: 1px solid #fff !important;
+        border-radius: 8px !important;
+    }
+    </style>
 </head>
 <body class=io-grey-mode>
 <div id=loading>
