--- a/donate/index.html
+++ b/donate/index.html
@@ -377,5 +377,11 @@ function switchNightMode() {
     var e = document.cookie.replace(/(?:(?:^|.*;\s*)night\s*=\s*([^;]*).*$)|^.*$/, "$1") || "0";
     e == "0" ? ($("#search-bg").css("background-image", "url(/assets/images/background.jpg)"), document.body.classList.remove("io-grey-mode"), document.body.classList.add("io-black-mode"), document.cookie = "night=1;path=/", console.log(" "), $(".switch-dark-mode").attr("data-original-title", "日间模式"), $(".mode-ico").removeClass("fa-moon"), $(".mode-ico").addClass("fa-sun")) : ($("#search-bg").css("background-image", "url(/assets/images/background.jpg)"), document.body.classList.remove("io-black-mode"), document.body.classList.add("io-grey-mode"), document.cookie = "night=0;path=/", console.log(" "), $(".switch-dark-mode").attr("data-original-title", "夜间模式"), $(".mode-ico").removeClass("fa-sun"), $(".mode-ico").addClass("fa-moon"))
 }</script>
+<style>
+#bulletin_box {
+    border: 1px solid #fff !important;
+    border-radius: 8px !important;
+}
+</style>
 </body>
 </html>
