--- a/index.html
+++ b/index.html
@@ -265,6 +265,19 @@
             box-shadow: none !important;
         }
     </style>
+    <style>
+        .sidebar-menu-inner ul ul {
+            min-width: 130px !important;
+        }
+        .navbar-collapse ul li ul {
+            min-width: 120px !important;
+        }
+    </style>
+    <style>
+        .sub-menu {
+            min-width: 120px !important;
+        }
+    </style>
 </head>
 <body class="io-grey-mode background-option-1">
 <div id=loading>
