--- a/group/index.html
+++ b/group/index.html
@@ -92,6 +92,14 @@
         box-shadow: none !important;
     }
     </style>
+    <style>
+        .sidebar-menu-inner ul ul {
+            min-width: 130px !important;
+        }
+        .navbar-collapse ul li ul {
+            min-width: 120px !important;
+        }
+    </style>
 </head>
 <body class=io-grey-mode>
 <div id=loading>
