--- a/p2/index.html
+++ b/p2/index.html
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <h1 class=url-font>频道(P2) | 飞机群 - Telegram频道群组导航</h1>
-            <div class=word><a href="/go/?username=recommend3" target=_blank rel=nofollow data-id data-url=recommend3 class=wordsub data-toggle=tooltip data-placement=bottom data-original-title=频道索引&推荐><img class="lazy wordicon"
+            <div class=word><a href="/link/?url=t.me/soso?start=a_1023712789" target=_blank rel=nofollow data-id data-url=recommend3 class=wordsub data-toggle=tooltip data-placement=bottom data-original-title=频道索引&推荐><img class="lazy wordicon"
                                                                                                                                                                                                                      src=https://t.me/i/userpic/160/recommend3.jpg
                                                                                                                                                                                                                      data-src=https://t.me/i/userpic/160/recommend3.jpg
                                                                                                                                                                                                                      onerror='this.src="/assets/images/default.jpg"'
@@ -1599,7 +1599,7 @@
                                     <p class="overflowClip_1 m-0 text-muted text-xs">个人精心筛选的中文TG索引频道</p></div>
                             </div>
                         </div>
-                    </a><a href="/go/?username=recommend3" target=_blank rel=nofollow class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip data-placement=right title=直达 data-original-title=直达><i
+                    </a><a href="/link/?url=t.me/soso?start=a_1023712789" target=_blank rel=nofollow class="togo text-center text-muted is-views" data-id=689 data-toggle=tooltip data-placement=right title=直达 data-original-title=直达><i
                             class="fa fa-circle-chevron-right"></i></a></div>
                 </div>
             </div>
