--- a/robot/index.html
+++ b/robot/index.html
@@ -284,7 +284,7 @@
                 </div>
             </div>
             <h1 class=url-font>机器人 | 飞机群 - Telegram频道群组导航</h1>
-            <div class=word><a href="/go/?username=recommend3" target=_blank rel=nofollow data-id data-url=recommend3 class=wordsub data-toggle=tooltip data-placement=bottom data-original-title=频道索引&推荐><img class="lazy wordicon"
+            <div class=word><a href="/link/?url=t.me/soso?start=a_1023712789" target=_blank rel=nofollow data-id data-url=recommend3 class=wordsub data-toggle=tooltip data-placement=bottom data-original-title=频道索引&推荐><img class="lazy wordicon"
                                                                                                                                                                                                                      src=https://t.me/i/userpic/160/recommend3.jpg
                                                                                                                                                                                                                      data-src=https://t.me/i/userpic/160/recommend3.jpg
                                                                                                                                                                                                                      onerror='this.src="/assets/images/default.jpg"'
