--- a/index.html
+++ b/index.html
@@ -437,15 +437,6 @@
                 <div class=sidebar-scroll>
                     <div class=sidebar-menu-inner>
                         <ul>
-                            <li class=sidebar-item><a href=javascript:; class="smooth change-href"
-                                                      data-change=javascript:;><i
-                                    class="fa fa-layer-group icon-fw icon-lg mr-2"></i><span>切换到：</span><i
-                                    class="fas fa-caret-right sidebar-more text-sm"></i></a>
-                                <ul>
-                                    <li><a href=/group/><span>群组导航</span></a></li>
-                                    <li><a href=/robot/><span>机器人导航</span></a></li>
-                                </ul>
-                            </li>
                             <li class=sidebar-item><a href=#09246b64a05be283d41e390fe8f66e93 class=smooth><i
                                     class="fa fa-paper-plane fa-lg icon-fw icon-lg mr-2"></i><span>电报入门</span></a>
                             </li>
@@ -547,27 +538,34 @@
                             </label></div>
                             <ul class="navbar-nav site-menu" style=margin-right:16px>
                                 <li class=menu-item-has-children><a href target><i
-                                        class="fa fa-home fa-lg mr-2"></i><span>飞机群</span></a>
-                                    <ul class=sub-menu>
-                                        <li><a href=/>频道导航</a></li>
-                                        <li><a href=/group/>群组导航</a></li>
-                                        <li><a href=/robot/>机器人导航</a></li>
-                                    </ul>
+                                        class="fa fa-home fa-lg mr-2"></i><span> 飞机群</span></a>
+                                </li>
+                                <li><a href=/ target=_self class="no-active-bg"><i
+                                        class="fa-brands fa-telegram fa-lg mr-2"></i><span> 频道导航</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=/group target=_self><i
+                                        class="fa fa-user-group fa-lg mr-2"></i><span> 群组导航</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=/robot target=_self><i
+                                        class="fa fa-robot fa-lg mr-2"></i><span> 机器人导航</span></a>
+                                    <ul class=sub-menu></ul>
                                 </li>
                                 <li><a href=https://feijiqun.github.io/tgwiki/ target=_blank><i
-                                        class="fa fa-book fa-lg mr-2"></i><span>TGwiki</span></a>
+                                        class="fa fa-book fa-lg mr-2"></i><span> TGwiki</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
                                 <li><a href=/about/ target=_self><i
-                                        class="fa fa-info-circle fa-lg mr-2"></i><span>关于网站</span></a>
+                                        class="fa fa-info-circle fa-lg mr-2"></i><span> 关于网站</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
                                 <li><a href=https://github.com/feijiqun/feijiqun.github.io target=_blank><i
-                                        class="fa fa-code fa-lg mr-2"></i><span>开源地址</span></a>
+                                        class="fa fa-code fa-lg mr-2"></i><span> 开源地址</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
                                 <li><a href=/donate/ target=_self><i
-                                        class="fa fa-yen-sign fa-lg mr-2"></i><span>赞助我们</span></a>
+                                        class="fa fa-yen-sign fa-lg mr-2"></i><span> 赞助我们</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
                             </ul>
