--- a/group/index.html
+++ b/group/index.html
@@ -194,12 +194,6 @@
                 <div class=sidebar-scroll>
                     <div class=sidebar-menu-inner>
                         <ul>
-                            <li class=sidebar-item><a href=javascript:; class="smooth change-href" data-change=javascript:;><i class="fa fa-layer-group icon-fw icon-lg mr-2"></i><span>切换到：</span><i class="fas fa-caret-right sidebar-more text-sm"></i></a>
-                                <ul>
-                                    <li><a href=/><span>频道导航</span></a></li>
-                                    <li><a href=/robot/><span>机器人导航</span></a></li>
-                                </ul>
-                            </li>
                             <li class=sidebar-item><a href=#a6e8ec446e8534901eb69f591cff8bbc class=smooth><i class="fa fa-paper-plane fa-lg icon-fw icon-lg mr-2"></i><span>中文社群</span></a></li>
                             <li class=sidebar-item><a href=javascript:; class="smooth change-href" data-change=javascript:;><i class="fas fa-dice-d20 icon-fw icon-lg mr-2"></i><span>社区交流</span><i class="fas fa-caret-right sidebar-more text-sm"></i></a>
                                 <ul>
@@ -250,23 +244,35 @@
                                 </svg>
                             </label></div>
                             <ul class="navbar-nav site-menu" style=margin-right:16px>
-                                <li class=menu-item-has-children><a href target><i class="fa fa-home fa-lg mr-2"></i><span>飞机群</span></a>
-                                    <ul class=sub-menu>
-                                        <li><a href=/>频道导航</a></li>
-                                        <li><a href=/group/>群组导航</a></li>
-                                        <li><a href=/robot/>机器人导航</a></li>
-                                    </ul>
+                                <li class=menu-item-has-children><a href target><i
+                                        class="fa fa-home fa-lg mr-2"></i><span> 飞机群</span></a>
                                 </li>
-                                <li><a href=https://feijiqun.github.io/tgwiki/ target=_blank><i class="fa fa-book fa-lg mr-2"></i><span>TGwiki</span></a>
+                                <li><a href=/ target=_self><i
+                                        class="fa-brands fa-telegram fa-lg mr-2"></i><span> 频道导航</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
-                                <li><a href=/about/ target=_self><i class="fa fa-info-circle fa-lg mr-2"></i><span>关于网站</span></a>
+                                <li><a href=/group target=_self><i
+                                        class="fa fa-user-group fa-lg mr-2"></i><span> 群组导航</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
-                                <li><a href=https://github.com/feijiqun/feijiqun.github.io target=_blank><i class="fa fa-code fa-lg mr-2"></i><span>开源地址</span></a>
+                                <li><a href=/robot target=_self><i
+                                        class="fa fa-robot fa-lg mr-2"></i><span> 机器人导航</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
-                                <li><a href=/donate/ target=_self><i class="fa fa-yen-sign fa-lg mr-2"></i><span>赞助我们</span></a>
+                                <li><a href=https://feijiqun.github.io/tgwiki/ target=_blank><i
+                                        class="fa fa-book fa-lg mr-2"></i><span> TGwiki</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=/about/ target=_self><i
+                                        class="fa fa-info-circle fa-lg mr-2"></i><span> 关于网站</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=https://github.com/feijiqun/feijiqun.github.io target=_blank><i
+                                        class="fa fa-code fa-lg mr-2"></i><span> 开源地址</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=/donate/ target=_self><i
+                                        class="fa fa-yen-sign fa-lg mr-2"></i><span> 赞助我们</span></a>
                                     <ul class=sub-menu></ul>
                                 </li>
                             </ul>
@@ -1830,9 +1836,6 @@
                 <div class=card-body><a href=https://feijiqun.github.io/donate/ title=您的赞助是我们前进的动力！ target=_blank rel=nofollow>赞助我们</a>
                     <a href=https://feijiqun.github.io/tgwiki/ title=由feijiqun打造的高质量Telegram知识库 target=_blank rel=nofollow>TGwiki</a>
                     <a href=https://feijiqun.github.io/tgqry/ title=Telegram频道群组查询机器人 target=_blank rel=nofollow>TGQRY</a>
-                    <a href=https://fh-xy.net/ title=免费下载ACG资源，各种游戏动漫漫画 target=_blank rel=nofollow>风花雪月</a>
-                    <a href=https://ygpy.net/ title=收录试用机场、常用软件以及热门网站 target=_blank rel=nofollow>一个朋友</a>
-                    <a href=https://kungal.com/ title=现阶段最先进的Galgame资源发布网站 target=_blank rel=nofollow>鲲Galgame论坛</a>
                     <a href=https://t.me/NewLinkAuditBot title=添加本站为友情链接 target=_blank rel=nofollow>添加友链</a></div>
             </div>
         </div>
