--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
             </div>
         </div>
         <div id=content class="content-site customize-site">
-            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i
+            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4" id="robot-nav"><i
                     class="site-tag fas fa-hashtag icon-lg mr-1" id=9a8e917dfa3352ed2c26ed60e17dd361></i>推广</h4></div>
             <div class=row>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
@@ -789,7 +789,7 @@
                 </div>
             </div>
             <br>
-            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i
+            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4" id="about-nav"><i
                     class="site-tag fas fa-hashtag icon-lg mr-1" id=09246b64a05be283d41e390fe8f66e93></i>电报入门</h4>
             </div>
             <div class=row>
@@ -925,7 +925,7 @@
                 </div>
             </div>
             <br>
-            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i
+            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4" id="donate-nav"><i
                     class="site-tag fas fa-hashtag icon-lg mr-1" id=50556ef655bc8a9ffc3a44064b0b4f80></i>科技资讯</h4>
             </div>
             <div class=row>
@@ -1321,7 +1321,7 @@
                 </div>
             </div>
             <br>
-            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i
+            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4" id="group-nav"><i
                     class="site-tag fas fa-hashtag icon-lg mr-1" id=8a4a3100300904f52f69dd38605e693b></i>媒体资讯</h4>
             </div>
             <div class=row>
@@ -1565,8 +1565,8 @@
                 </div>
             </div>
             <br>
-            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i
-                    class="site-tag fas fa-hashtag icon-lg mr-1" id=2045be66c487921dab8aec1b641d1aef></i>影视音乐</h4>
+            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4" id="2045be66c487921dab8aec1b641d1aef"><i
+                    class="site-tag fas fa-hashtag icon-lg mr-1"></i>影视音乐</h4>
             </div>
             <div class=row>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
