--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                 </svg>
                             </label></div>
                             <ul class="navbar-nav site-menu" style=margin-right:16px>
-                                <li class=menu-item-has-children><a href target><i
+                                <li class=menu-item-has-children><a href=/ target=_self><i
                                         class="fa fa-home fa-lg mr-2"></i><span> 飞机群</span></a>
                                 </li>
                                 <li><a href=/ target=_self class="no-active-bg"><i
