--- a/robot/index.html
+++ b/robot/index.html
@@ -326,7 +326,7 @@
             </div>
         </div>
         <div id=content class="content-site customize-site">
-            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i class="site-tag fas fa-hashtag icon-lg mr-1" id=9a8e917dfa3352ed2c26ed60e17dd361></i>推广</h4></div>
+            <div class="d-flex flex-fill"><h4 class="text-gray text-lg mb-4"><i class="site-tag fas fa-hashtag icon-lg mr-1" id=9a8e917dfa3352ed2c26ed60e17dd361></i>搜索工具</h4></div>
             <div class=row>
                 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
                     <div class="url-body default"><a href="/link/?url=t.me/soso?start=a_1023712789" target=_blank rel=nofollow
