--- a/donate/index.html
+++ b/donate/index.html
@@ -213,13 +213,17 @@
                                 </svg>
                             </label></div>
                             <ul class="navbar-nav site-menu" style=margin-right:16px>
-                                <li class=menu-item-has-children><a href target><i
-                                        class="fa fa-home fa-lg mr-2"></i><span>飞机群</span></a>
-                                    <ul class=sub-menu>
-                                        <li><a href=/>频道导航</a></li>
-                                        <li><a href=/group/>群组导航</a></li>
-                                        <li><a href=/robot/>机器人导航</a></li>
-                                    </ul>
+                                <li><a href=/ target=_self class="no-active-bg"><i
+                                        class="fa-brands fa-telegram fa-lg mr-2"></i><span> 频道导航</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=/group target=_self><i
+                                        class="fa fa-user-group fa-lg mr-2"></i><span> 群组导航</span></a>
+                                    <ul class=sub-menu></ul>
+                                </li>
+                                <li><a href=/robot target=_self><i
+                                        class="fa fa-robot fa-lg mr-2"></i><span> 机器人导航</span></a>
+                                    <ul class=sub-menu></ul>
                                 </li>
                                 <li><a href=https://feijiqun.github.io/tgwiki/ target=_blank><i
                                         class="fa fa-book fa-lg mr-2"></i><span>TGwiki</span></a>
