--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name=author content="FeiJiQun">
     <meta name=copyright content="FeiJiQun">
     <meta name=description
-          content="Telegram频道 | 飞机群 - Telegram频道群组导航。收录Telegram上的优质频道、群组、机器人，打造一个高质量Telegram导航。2025全网最佳Telegram导航，从20000+频道、群组、机器人中精心筛选，更多优质内容尽在FeiJiQun！">
+          content="Telegram频道 | 频道导航 - Telegram频道群组导航。收录Telegram上的优质频道、群组、机器人，打造一个高质量Telegram导航。2025全网最佳Telegram导航，从20000+频道、群组、机器人中精心筛选，更多优质内容尽在FeiJiQun！">
     <meta name=keywords
           content="Telegram频道,Telegram导航,FeiJiQun,Telegram频道推荐,Telegram索引,TG频道,TG导航,TG频道推荐,TG索引,电报频道,电报导航,电报频道推荐,电报索引,feijiqun.github.io">
     <meta name=image content="/assets/images/favicon.png">
@@ -17,7 +17,7 @@
     <meta name="msvalidate.01" content="3825955D3AA4A90115C42EE7EA7C3CFE"/>
     <meta name=yandex-verification content="66b1ca86347489b2">
     <link rel=manifest href=/manifest.json>
-    <title>频道 | 飞机群 - Telegram频道群组导航</title>
+    <title>频道 | 频道导航 - Telegram频道群组导航</title>
     <link rel="shortcut icon" href=/assets/images/favicon.png>
     <link rel=stylesheet id=block-library-css href=/assets/css/block-library.min-5.6.2.css
           type=text/css media=all>
